--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </nav>
         <div class="hero">
             <h1>Bienvenue sur Kids Learning</h1>
-            <button>Découvrir</button>
+            <button class="btn">Découvrir</button>
         </div>
     </header>
     <main>
@@ -97,7 +97,7 @@
                     <label for="message">Message:</label>
                     <textarea name="message" id="message" cols="30" rows="10"></textarea>
                     
-                    <input class="btn" type="submit" value="Envoyer">
+                    <input class="btn test" type="submit" value="Envoyer">
                 </form>
             </div>
         </div>
